k8s/cert-manager/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app
  namespace: app
  annotations:
    cert-manager.io/cluster-issuer: holded.itgaiden.com-ca
    cert-manager.io/duration: 2160h # 90d
    cert-manager.io/renew-before: 360h # 15d
spec:
  ingressClassName: external-nginx
  tls:
  - hosts:
    - holded.itgaiden.com
    secretName: go-app-cert-key-pair
  rules:
  - host: holded.itgaiden.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-service
            port:
              number: 80
